# ParallelSudokuSolver

./: .gitignore  CMakeLists.txt  README.md  solution.txt
data/: puzzles.txt
include/: parallel_solver.hpp  sudoku.hpp  util.hpp
include/benchmark/: BenchmarkManager.hpp
include/config/: Config.hpp
include/core/: Sudoku.hpp  SudokuUtils.hpp
include/io/: ArgumentParser.hpp  FileIO.hpp
include/solver/: BacktrackingSolver.hpp  BruteForceSolver.hpp  DLXSolver.hpp  ParallelBacktrackingSolver.hpp  ParallelBruteForceSolver.hpp  ParallelDLXSolver.hpp  SolverBase.hpp
src/: benchmark_solver.cpp  main.cpp  main_benchmark.cpp  parallel_solver.cpp  sudoku.cpp  util.cpp
src/benchmark/: BenchmarkManager.cpp
src/core/: Sudoku.cpp
src/io/: ArgumentParser.cpp  CMakeLists.txt  FileIO.cpp
src/solver/: BacktrackingSolver.cpp  BruteForceSolver.cpp  DLXSolver.cpp  ParallelBacktrackingSolver.cpp  ParallelBruteForceSolver.cpp  ParallelDLXSolver.cpp
tests/: CMakeLists.txt  test_backtracking.cpp  test_bruteforce.cpp  test_dlx.cpp  test_solver.cpp
